[package]
name = "systems"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "7"
x509-parser = "0.12.0"
chrono = "0.4"
# diesel = { version = "1.4.8", features = ["sqlite"] }

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]